fixing viewport spacing/responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,20 @@
 .employee-card {
   margin-top: 1rem;
   margin-bottom: 1rem;
+  max-width: 75%;
 }
 
+.container {
+  margin-left: 5px;
+}
 .photo {
-  padding: 3rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 2rem;
+}
+
+@media screen and (max-width: 990px) {
+  .employee-card {
+    margin-left: 3rem;
+  }
 }
